# mario_course

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  api.Dockerfile  app.Dockerfile  backend.Dockerfile  config.py  docker-compose.yml  migrations.requirements.txt  pyproject.toml  requirements.txt  tox.ini
api/migrations/: config.py  env.py
api/trading_course/auth/: db.py
docker/dockerfiles/: base.Dockerfile
docker/scripts/: api_entrypoint.sh  celery_worker_entrypoint.sh  flower_entrypoint.sh
migrations/: alembic.ini  env.py
migrations/versions/: 5d68ff9542cb_db_init.py  775a3ff68ff7_.py  init_.py
scripts/: api_entrypoint.sh  flower_entrypoint.sh  worker_entrypoint.sh
src/: celery_app.py  config.py  database.py  global_config.py  main.py
src/api/: celery_app.py  config.py  main.py
src/api/auth/: router.py  users.py
src/api/tasks/: router.py  schemas.py  tasks.py
src/migrations/: alembic_config.py  base_metadata.py  db_metadata.py  env.py
src/migrations/versions/: 00e3b334afa3_.py  04d7c113d9c9_.py  14719306c6a9_.py  2c5f48f21c7a_.py  2c6d4289969b_.py  2ef41c5cd1c6_.py  389c886ea817_.py  960e4eb845fe_.py  c8a0d43c566c_.py  cf95eaad6528_.py  d4e30458fcae_.py  ddd4c2664cb1_.py
src/ssl/: localhost+2-key.pem  localhost+2.pem
src/utils/: celery.py  celery_tasks.py
tests/: conftest.py
trading_course/: Dockerfile  db.py  main.py
trading_course/api/: database.py
trading_course/api/auth/: db.py  models.py  users.py
trading_course/auth/: router.py  users.py
trading_course/migrations/: alembic_config.py  env.py
(+10 files in other folders)
