[tool.poetry]
name = "trading-course"
version = "0.1.0"
description = ""
authors = ["Lord Divan <darveter667@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
pip = "^23.2.1"
setuptools = "^68.1.2"
celery = "^5.3.1"
redis = "^5.0.0"
flower = "^2.0.1"
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"


[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]
asyncio_mode="auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
